classDiagram
    class City {
        -Long id
        -String name
        -double latitude
        -double longitude
        -String region
        -int population
    }

    class CityRepository {
        <<interface>>
        +findAll() List~City~
    }

    class CityService {
        <<interface>>
        +findNearbyCities(...) List~CityResponseDTO~
    }

    class CityServiceImpl {
        -CityRepository repository
        -DistanceCalculator calculator
    }

    class CityResponseDTO {
        -String name
        -int distance
        -City city
    }

    CityRepository "1" --> "*" City : cities
    CityServiceImpl "1" --> "1" CityRepository : repository
    CityServiceImpl "1" ..> "*" CityResponseDTO : results
    CityResponseDTO "*" --> "1" City : city
    CityServiceImpl ..|> CityService